style.css
html{
    scroll-behavior: smooth;
}

body {
    margin: 0;
    font-size: 1.25rem;
    color: #222;
    width: 100%;
    min-height: 100vh;
    min-height: -webkit-fill-available;
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    background-color: #faf5ff;
}

h1 {
    font-size: 4rem;
    margin-top: 0rem;
    margin-bottom: 0rem;
    font-family: "Quicksand", sans-serif;
}

h2 {
    font-size: 2.5rem;
    margin-top: 0rem;
    margin-bottom: 2rem;
    font-family: "Quicksand", sans-serif;
}

h2 span {
    background: -webkit-linear-gradient(left, #6366F1, #8B5CF6, #EC4899);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

h3 {
    font-size: 1.5rem;
    margin-top: 0rem;
    margin-bottom: 1rem;
    font-family: "Quicksand", sans-serif;
}

nav{
    position: sticky;
    top: 0;
    display: flex;
    align-items: center;
    column-gap: 2rem;
    padding: 2rem;
    justify-content: space-between;
    background-color: #faf5ff80;
    backdrop-filter: saturate(180%) blur(20px);
}

#leftLinks {
    display: flex;
    align-items: center;
    column-gap: 2rem;
}

#rightLinks {
    display: flex;
    align-items: center;
    column-gap: 1rem;
}

button.circle {
    width: 36px;
    display: flex;
    align-items: center;
    justify-content: center;
}

nav div a{
    color: #222;
    text-decoration: none;
    font-family: "Quicksand", sans-serif;
    font-size: 1.2rem;
    font-weight: 600;
    width: 8rem;
}

#l1:hover > #hr1, #l2:hover > #hr2, #l3:hover > #hr3, #l4:hover > #hr4 {
    width: 100%;
}

hr{ 
    background: -webkit-linear-gradient(left, #6366F1, #8B5CF6, #EC4899);
    height: .25rem;
    width: 0rem; 
    margin: 0;
    border-radius: 1rem;
    border: none;
    transition: .3s ease-in-out;
}

nav button {
    border-radius: 2rem;
    border: 2px solid #222;
    background-color: transparent;
    font-family: "Quicksand", sans-serif;
    font-size: 1.2rem;
    font-weight: 600;
    padding: .25rem 1rem;
    cursor: pointer;
}

main{
    display: flex;
    flex-direction: column;
    gap: 4rem;
    max-width: 1400px;
    margin: auto;
}

.container {
    gap: 4rem;
    padding: 2rem;
}

.flex {
    display: flex;
}
.w-center {
    justify-content: center;
}

.v-center {
    align-items: center;
}

#about {
    width: 70%;
    max-width: 36rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 8rem 0rem;
}

#profilePicture {
    width: 18rem;
    height: 18rem;
    background-color: #8B5CF6;
    border-radius: 18rem;
}

.projects {
    width: 100%;
    display: flex;
    gap: 2rem;
}

.projects > div {
    width: 33%;
    height: 32rem;
    color: #ffffff;
    font-size: 1rem;
    border-radius: 1.5rem;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    padding: 2rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    overflow: hidden;
}

.projectDescription{
    min-height: 8rem;
}

/* Yoga */
.projects > div:nth-child(1) {
    background-color: #222;
}

#previewYoga {
    height: inherit;
    margin: 2rem -2rem -2rem 0rem;
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    column-gap: 4rem;
    rotate: -30deg;
}

#previewYoga > div {
    width: 16rem;
    height: 150%;
    border-radius: 1rem;
    background-color: #ffffff;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    
}

#previewYoga > div:nth-child(1) {
    background-color: #ffffff;
    margin-top: 2rem;
}
#previewYoga > div:nth-child(2) {
    background-color: #DB2777;
    z-index: 2;
}
#previewYoga > div:nth-child(3) {
    background-color: #ffffff;
    margin-top: 2rem;
}.projects > div:nth-child(1) {
    background-color: #222;
}

/* Electolux */

.projects > div:nth-child(2) {
    background-color: #041E50;
}

#previewElux {
    height: inherit;
    margin: 2rem -2rem -2rem 0rem;
    display: grid;
    grid-template-columns: repeat(3, minmax(0, 1fr));
    column-gap: 4rem;
    rotate: -30deg;
}

#previewElux > div {
    width: 16rem;
    height: 150%;
    border-radius: 1rem;
    background-color: #ffffff;
    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    
}

#previewElux > div:nth-child(1) {
    background-color: #aebac2;
    margin-top: 2rem;
}
#previewElux > div:nth-child(2) {
    background-color: #7a8a9b;
    z-index: 2;
}
#previewElux > div:nth-child(3) {
    background-color: #dee8ea;
    margin-top: 2rem;
}

